--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -33,48 +32,38 @@
   </head>
 
   <body>
-
-    <div class="site-wrapper">
-
-      <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-              <img class="masthead-brand, img-responsive" src="images/southamLawWordmarkWhiteText.png" alt="Southam Law logo" />
-              <!-- <h3 class="masthead-brand">Southam Law</h3> -->
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="firm.html">The firm</a></li>
-                  <li><a href="keith.html">Keith</a></li>
-                  <li><a href="news.html">News</a></li>
-                  <li class="active"><a href="contact.html">Contact</a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-
-          <div class="inner cover">
-            <!-- <h1 class="cover-heading">Southam Law</h1> -->
-            <p class="lead">Specializing in immigration and family law.</p>
-            <!-- <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
-            </p> -->
-          </div>
-
-          <div class="mastfoot">
-            <div class="outer">
-              <p>Valid <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fsouthamlaw.com">HTML5</a> and <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fsouthamlaw.com&amp;profile=css3&amp;usermedium=all&amp;warning=1&amp;vextwarning=true&amp;lang=en">CSS3</a>. Based on <a href="http://getbootstrap.com">Bootstrap</a>.</p>
-            </div>
-          </div>
-
+<div class="site-wrapper">
+  <nav class="navbar navbar-fixed-top">
+    <div class="container">
+      <div id="navbar">
+        <div class="masthead-brand">
+          <img class="img-responsive" src="images/southamLawWordmarkWhiteText.png" alt="Southam Law logo" />
         </div>
-
+      <div class="container">
+        <ul class="nav masthead-nav">
+          <li><a href="index.html">Firm</a></li>
+          <li><a href="keith.html">Keith</a></li>
+          <li><a href="news.html">News</a></li>
+          <li class="active"><a href="contact.html">Contact</a></li>
+        </ul>
       </div>
-
+      </div>
     </div>
+  </nav>
+  <div class="container main-content">
+    <div class="row jumbotron">
+      <h1>Keith</h1>
+      <p>Email: <a href="mailto:keith@southamlaw.com">keith@southamlaw.com</a></p>
+      <p>Phone: +1 (773) 466-4478</p>    </div>
+  </div>
+
+  <!-- <footer> -->
+    <div class="container mastfoot">
+      <p>Valid <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fsouthamlaw.com">HTML5</a> and <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fsouthamlaw.com&amp;profile=css3&amp;usermedium=all&amp;warning=1&amp;vextwarning=true&amp;lang=en">CSS3</a>. Based on <a href="http://getbootstrap.com">Bootstrap</a>.</p>
+    </div>
+  <!-- </footer> -->
+</div>
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
