--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>Southam Law</title>
+    <title>Southam Law — Firm</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -33,48 +32,49 @@
   </head>
 
   <body>
-
-    <div class="site-wrapper">
-
-      <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-              <img class="masthead-brand, img-responsive" src="images/southamLawWordmarkWhiteText.png" alt="Southam Law logo" />
-              <!-- <h3 class="masthead-brand">Southam Law</h3> -->
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li class="active"><a href="index.html">Home</a></li>
-                  <li><a href="firm.html">The firm</a></li>
-                  <li><a href="keith.html">Keith</a></li>
-                  <li><a href="news.html">News</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-
-          <div class="inner cover">
-            <!-- <h1 class="cover-heading">Southam Law</h1> -->
-            <p class="lead">Specializing in immigration and family law.</p>
-            <!-- <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
-            </p> -->
-          </div>
-
-          <div class="mastfoot">
-            <div class="outer">
-              <p>Valid <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fsouthamlaw.com">HTML5</a> and <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fsouthamlaw.com&amp;profile=css3&amp;usermedium=all&amp;warning=1&amp;vextwarning=true&amp;lang=en">CSS3</a>. Based on <a href="http://getbootstrap.com">Bootstrap</a>.</p>
-            </div>
-          </div>
-
+<div class="site-wrapper">
+  <nav class="navbar navbar-fixed-top">
+    <div class="container">
+      <div id="navbar">
+        <div class="masthead-brand">
+          <img class="img-responsive" src="images/southamLawWordmarkWhiteText.png" alt="Southam Law logo" />
         </div>
-
+      <div class="container">
+        <ul class="nav masthead-nav">
+          <li class="active"><a href="index.html">Firm</a></li>
+          <li><a href="keith.html">Keith</a></li>
+          <li><a href="news.html">News</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </div>
-
+      </div>
     </div>
+  </nav>
+  <div class="container main-content">
+    <div class="row jumbotron vertical-center">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <h2>Southam Law is a law firm dedicated to the needs of immigrants and nontraditional families. Southam Law recognizes that law, especially immigration law, can be frustratingly complex.</h2>
+      </div>
+      <div class="col-md-1"></div>
+    </div>
+
+  <div class="row jumbotron vertical-center">
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
+      <p>A main goal of Southam Law is to ensure that you understand how immigration law affects your unique situation. Unlike other law offices, Southam Law will always take the time to explain the choices you have in order to make sure that you can make the best possible decisions.</p>
+
+      <p>Southam Law also recognizes that another barrier in this area is cost. Lawyers are expensive, and frequently the final costs are not clear in advance. In virtually all cases, Southam Law charges flat fees, which means the costs for legal services are fixed in advance. This eliminates the shock of surprisingly high bills. Additionally, in many cases, Southam Law also offers different levels of service. You can tell Southam Law a cost level that is comfortable for you, and Southam Law will work to tailor a package of legal services that fit your budget.</p>
+    </div>
+    <div class="col-md-1"></div>
+  </div>
+</div>
+
+  <div class="container mastfoot">
+    <p>Valid <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fsouthamlaw.com">HTML5</a> and <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fsouthamlaw.com&amp;profile=css3&amp;usermedium=all&amp;warning=1&amp;vextwarning=true&amp;lang=en">CSS3</a>. Based on <a href="http://getbootstrap.com">Bootstrap</a>.</p>
+  </div>
+</div>
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
