--- a/keith.html
+++ b/keith.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -33,48 +32,38 @@
   </head>
 
   <body>
-
-    <div class="site-wrapper">
-
-      <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-              <img class="masthead-brand, img-responsive" src="images/southamLawWordmarkWhiteText.png" alt="Southam Law logo" />
-              <!-- <h3 class="masthead-brand">Southam Law</h3> -->
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="firm.html">The firm</a></li>
-                  <li class="active"><a href="keith.html">Keith</a></li>
-                  <li><a href="news.html">News</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-
-          <div class="inner cover">
-            <!-- <h1 class="cover-heading">Southam Law</h1> -->
-            <p class="lead">Specializing in immigration and family law.</p>
-            <!-- <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
-            </p> -->
-          </div>
-
-          <div class="mastfoot">
-            <div class="outer">
-              <p>Valid <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fsouthamlaw.com">HTML5</a> and <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fsouthamlaw.com&amp;profile=css3&amp;usermedium=all&amp;warning=1&amp;vextwarning=true&amp;lang=en">CSS3</a>. Based on <a href="http://getbootstrap.com">Bootstrap</a>.</p>
-            </div>
-          </div>
-
+<div class="site-wrapper">
+  <nav class="navbar navbar-fixed-top">
+    <div class="container">
+      <div id="navbar">
+        <div class="masthead-brand">
+          <img class="img-responsive" src="images/southamLawWordmarkWhiteText.png" alt="Southam Law logo" />
         </div>
-
+      <div class="container">
+        <ul class="nav masthead-nav">
+          <li><a href="index.html">Firm</a></li>
+          <li class="active"><a href="keith.html">Keith</a></li>
+          <li><a href="news.html">News</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </div>
-
+      </div>
     </div>
+  </nav>
+  <div class="container main-content">
+    <div class="row jumbotron vertical-center">
+      <!-- <h1 class="cover-heading">Southam Law</h1> -->
+      <p>Keith Southam is the founder and principal of Southam Law. Keith has built a career around helping immigrants. Keith first worked as an international student advisor and an ESL teacher before law school. In law school, Keith focused on immigration law, including an internship at the Chicago Immigration Court and a clerkship with a solo practitioner of immigration law. After law school, Keith worked as an immigrant attorney for a boutique immigration firm in Chicago where he handled a full range of immigration law matters, including family-based green cards, non-immigrant work visas, DACA, asylum, deportation defense, and many other areas. The skills as a student advisor and ESL teacher give Keith a unique approach to immigration law. This approach is centered on providing easy-to-understand and accurate information, so that you can make a fully-informed decision. </p>
+    </div>
+  </div>
+
+  <!-- <footer> -->
+    <div class="container mastfoot">
+      <p>Valid <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fsouthamlaw.com">HTML5</a> and <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fsouthamlaw.com&amp;profile=css3&amp;usermedium=all&amp;warning=1&amp;vextwarning=true&amp;lang=en">CSS3</a>. Based on <a href="http://getbootstrap.com">Bootstrap</a>.</p>
+    </div>
+  <!-- </footer> -->
+</div>
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
