--- a/news.html
+++ b/news.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -33,48 +32,96 @@
   </head>
 
   <body>
-
-    <div class="site-wrapper">
-
-      <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-              <img class="masthead-brand, img-responsive" src="images/southamLawWordmarkWhiteText.png" alt="Southam Law logo" />
-              <!-- <h3 class="masthead-brand">Southam Law</h3> -->
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="firm.html">The firm</a></li>
-                  <li><a href="keith.html">Keith</a></li>
-                  <li class="active"><a href="news.html">News</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-
-          <div class="inner cover">
-            <!-- <h1 class="cover-heading">Southam Law</h1> -->
-            <p class="lead">Specializing in immigration and family law.</p>
-            <!-- <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
-            </p> -->
-          </div>
-
-          <div class="mastfoot">
-            <div class="outer">
-              <p>Valid <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fsouthamlaw.com">HTML5</a> and <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fsouthamlaw.com&amp;profile=css3&amp;usermedium=all&amp;warning=1&amp;vextwarning=true&amp;lang=en">CSS3</a>. Based on <a href="http://getbootstrap.com">Bootstrap</a>.</p>
-            </div>
-          </div>
-
+<div class="site-wrapper">
+  <nav class="navbar navbar-fixed-top">
+    <div class="container">
+      <div id="navbar">
+        <div class="masthead-brand">
+          <img class="img-responsive" src="images/southamLawWordmarkWhiteText.png" alt="Southam Law logo" />
         </div>
-
+      <div class="container">
+        <ul class="nav masthead-nav">
+          <li><a href="index.html">Firm</a></li>
+          <li><a href="keith.html">Keith</a></li>
+          <li class="active"><a href="news.html">News</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </div>
+      </div>
+    </div>
+  </nav>
+  <div class="container main-content">
+    <div class="row">
+      <div class="blog-post">
+         <h2 class="blog-post-title">Sample blog post</h2>
+         <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
+
+         <p>This blog post shows a few different types of content that's supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
+         <hr>
+         <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+         <blockquote>
+           <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+         </blockquote>
+         <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+         <h2>Heading</h2>
+         <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+         <h3>Sub-heading</h3>
+         <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+         <pre><code>Example code block</code></pre>
+         <p>Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
+         <h3>Sub-heading</h3>
+         <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+         <ul>
+           <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
+           <li>Donec id elit non mi porta gravida at eget metus.</li>
+           <li>Nulla vitae elit libero, a pharetra augue.</li>
+         </ul>
+         <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
+         <ol>
+           <li>Vestibulum id ligula porta felis euismod semper.</li>
+           <li>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</li>
+           <li>Maecenas sed diam eget risus varius blandit sit amet non magna.</li>
+         </ol>
+         <p>Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.</p>
+       </div><!-- /.blog-post -->
+
+       <div class="blog-post">
+         <h2 class="blog-post-title">Another blog post</h2>
+         <p class="blog-post-meta">December 23, 2013 by <a href="#">Jacob</a></p>
+
+         <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+         <blockquote>
+           <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+         </blockquote>
+         <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+         <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+       </div><!-- /.blog-post -->
+
+       <div class="blog-post">
+         <h2 class="blog-post-title">New feature</h2>
+         <p class="blog-post-meta">December 14, 2013 by <a href="#">Chris</a></p>
+
+         <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+         <ul>
+           <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
+           <li>Donec id elit non mi porta gravida at eget metus.</li>
+           <li>Nulla vitae elit libero, a pharetra augue.</li>
+         </ul>
+         <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+         <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
+       </div><!-- /.blog-post -->
+
 
     </div>
+  </div>
+
+  <!-- <footer> -->
+    <div class="container mastfoot">
+      <p>Valid <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fsouthamlaw.com">HTML5</a> and <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fsouthamlaw.com&amp;profile=css3&amp;usermedium=all&amp;warning=1&amp;vextwarning=true&amp;lang=en">CSS3</a>. Based on <a href="http://getbootstrap.com">Bootstrap</a>.</p>
+    </div>
+  <!-- </footer> -->
+</div>
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
