--- a/news.html
+++ b/news.html
@@ -53,6 +53,12 @@
   <div class="container main-content">
     <div class="row">
       <div class="blog-post">
+         <h2 class="blog-post-title">Hello world</h2>
+         <p class="blog-post-meta">July 31, 2016 by <a href="#">Keith</a></p>
+        <p>This is a test blog post.</p>
+       </div><!-- /.blog-post -->
+
+      <div class="blog-post">
          <h2 class="blog-post-title">Sample blog post</h2>
          <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
 
