--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </div>
 
   <div class="container mastfoot">
-    <p>Valid <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fsouthamlaw.com">HTML5</a> and <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fsouthamlaw.com&amp;profile=css3&amp;usermedium=all&amp;warning=1&amp;vextwarning=true&amp;lang=en">CSS3</a>. Based on <a href="http://getbootstrap.com">Bootstrap</a>.</p>
+    <p>Valid <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fsouthamlaw.com">HTML5</a>. Based on <a href="http://getbootstrap.com">Bootstrap</a>.</p>
   </div>
 </div>
 
