Replaced "Hello world" with real news item

--- a/news.html
+++ b/news.html
@@ -53,9 +53,9 @@
   <div class="container main-content">
     <div class="row">
       <div class="blog-post">
-         <h2 class="blog-post-title">Hello world</h2>
-         <p class="blog-post-meta">July 31, 2016 by <a href="#">Keith</a></p>
-        <p>This is a test blog post.</p>
+         <h2 class="blog-post-title">Expansion of Provisional Unlawful Presence Waiver</h2>
+         <p class="blog-post-meta">August 3, 2016 by <a href="#">Keith</a></p>
+        <p>On Friday, US Citizenship and Immigration Services announced a final regulation that expands the provisional unlawful presence waiver. This waiver is necessary for persons who have a qualifying relative in the United States (a spouse or a parent where the spouse or parent is a US citizen or a lawful permanent resident) but who cannot get a green card from within the United States. The most common reason that a green card is not available in the United States is because that person entered without inspection (e.g., by hiring a “coyote” to sneak into the US). However, the previous rule only benefited persons who had citizen family members. The new rule will expand the program to persons who have lawful permanent resident family members. The expansion does not (and by law cannot) eliminate the need for a trip outside of the US to get a valid visa and a valid entry. The expansion also takes away some certainty that was present in the prior program. Still, the expansion of the program to help the largest possible number of immigrants is a welcome change!.</p>
        </div><!-- /.blog-post -->
 
     </div>
