Centered everything, standardized type

--- a/keith.html
+++ b/keith.html
@@ -52,8 +52,12 @@
   </nav>
   <div class="container main-content">
     <div class="row jumbotron vertical-center">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
       <!-- <h1 class="cover-heading">Southam Law</h1> -->
       <p>Keith Southam is the founder and principal of Southam Law. Keith has built a career around helping immigrants. Keith first worked as an international student advisor and an ESL teacher before law school. In law school, Keith focused on immigration law, including an internship at the Chicago Immigration Court and a clerkship with a solo practitioner of immigration law. After law school, Keith worked as an immigrant attorney for a boutique immigration firm in Chicago where he handled a full range of immigration law matters, including family-based green cards, non-immigrant work visas, DACA, asylum, deportation defense, and many other areas. The skills as a student advisor and ESL teacher give Keith a unique approach to immigration law. This approach is centered on providing easy-to-understand and accurate information, so that you can make a fully-informed decision. </p>
+      </div>
+      <div class="col-md-1"></div>
     </div>
   </div>
 
