--- a/contact.html
+++ b/contact.html
@@ -51,10 +51,15 @@
     </div>
   </nav>
   <div class="container main-content">
-    <div class="row jumbotron">
+    <div class="row jumbotron vertical-center">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
       <h1>Keith</h1>
       <p>Email: <a href="mailto:keith@southamlaw.com">keith@southamlaw.com</a></p>
-      <p>Phone: +1 (773) 466-4478</p>    </div>
+      <p>Phone: +1 (773) 466-4478</p>
+      </div>
+      <div class="col-md-1"></div>
+    </div>
   </div>
 
   <!-- <footer> -->
