Changed fromat, added landing page, image, etc.

--- a/contact.html
+++ b/contact.html
@@ -37,11 +37,11 @@
     <div class="container">
       <div id="navbar">
         <div class="masthead-brand">
-          <img class="img-responsive" src="images/southamLawWordmarkWhiteText.png" alt="Southam Law logo" />
+          <a href="index.html"><img class="img-responsive" src="images/southamLawWordmarkWhiteText.png" alt="Southam Law logo" /></a>
         </div>
       <div class="container">
         <ul class="nav masthead-nav">
-          <li><a href="index.html">Firm</a></li>
+          <li><a href="firm.html">Firm</a></li>
           <li><a href="keith.html">Keith</a></li>
           <li><a href="news.html">News</a></li>
           <li class="active"><a href="contact.html">Contact</a></li>
