--- a/firm.html
+++ b/firm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="full-image">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,7 +31,7 @@
     <![endif]-->
   </head>
 
-  <body class="no-background-color">
+  <body>
 <div class="site-wrapper">
   <nav class="navbar navbar-fixed-top">
     <div class="container">
@@ -41,7 +41,7 @@
         </div>
       <div class="container">
         <ul class="nav masthead-nav">
-          <li><a href="firm.html">Firm</a></li>
+          <li class="active"><a href="firm.html">Firm</a></li>
           <li><a href="keith.html">Keith</a></li>
           <li><a href="news.html">News</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -51,13 +51,15 @@
     </div>
   </nav>
   <div class="container main-content">
-    <div class="row jumbotron vertical-center">
-      <div class="col-md-1"></div>
-      <div class="col-md-10 rounded">
-        <h2>Southam Law is a law firm dedicated to the needs of immigrants and nontraditional families. Southam Law recognizes that law, especially immigration law, can be frustratingly complex.</h2>
-      </div>
-      <div class="col-md-1"></div>
+  <div class="row big-text vertical-center">
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
+      <p>A main goal of Southam Law is to ensure that you understand how immigration law affects your unique situation. Unlike other law offices, Southam Law will always take the time to explain the choices you have in order to make sure that you can make the best possible decisions.</p>
+
+      <p>Southam Law also recognizes that another barrier in this area is cost. Lawyers are expensive, and frequently the final costs are not clear in advance. In virtually all cases, Southam Law charges flat fees, which means the costs for legal services are fixed in advance. This eliminates the shock of surprisingly high bills. Additionally, in many cases, Southam Law also offers different levels of service. You can tell Southam Law a cost level that is comfortable for you, and Southam Law will work to tailor a package of legal services that fit your budget.</p>
     </div>
+    <div class="col-md-1"></div>
+  </div>
 </div>
 
   <div class="container mastfoot">
