--- a/keith.html
+++ b/keith.html
@@ -37,11 +37,11 @@
     <div class="container">
       <div id="navbar">
         <div class="masthead-brand">
-          <img class="img-responsive" src="images/southamLawWordmarkWhiteText.png" alt="Southam Law logo" />
+          <a href="index.html"><img class="img-responsive" src="images/southamLawWordmarkWhiteText.png" alt="Southam Law logo" /></a>
         </div>
       <div class="container">
         <ul class="nav masthead-nav">
-          <li><a href="index.html">Firm</a></li>
+          <li><a href="firm.html">Firm</a></li>
           <li class="active"><a href="keith.html">Keith</a></li>
           <li><a href="news.html">News</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -51,7 +51,7 @@
     </div>
   </nav>
   <div class="container main-content">
-    <div class="row jumbotron vertical-center">
+    <div class="row big-text vertical-center">
       <div class="col-md-1"></div>
       <div class="col-md-10">
       <!-- <h1 class="cover-heading">Southam Law</h1> -->
