Updated landing page text

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="row jumbotron vertical-center">
       <div class="col-md-1"></div>
       <div class="col-md-10 rounded">
-        <h2>Southam Law is a law firm dedicated to the needs of immigrants and nontraditional families. Southam Law recognizes that law, especially immigration law, can be frustratingly complex.</h2>
+        <h2>We are dedicated to the needs of immigrants and families of all kinds. Southam Law recognizes that law, especially immigration law, can be frustratingly complex.</h2>
       </div>
       <div class="col-md-1"></div>
     </div>
