--- a/news.html
+++ b/news.html
@@ -55,6 +55,20 @@
       <div class="col-md-1"></div>
       <div class="col-md-10">
         <div class="blog-post">
+         <h1 class="blog-post-title">Mam and Quiché in Immigration Courts</h1>
+         <p class="blog-post-meta">August 11, 2016 by <a href="#">Keith</a></p>
+        <p>A couple of days ago, the Los Angeles Times published <a href="http://www.latimes.com/local/california/la-me-mayan-indigenous-languages-20160725-snap-story.html">this story</a> about language problems that asylum seekers from Guatemala and Honduras can face. While many people think of these countries as Spanish-speaking, that misses a range of linguistic diversity. In fact, two languages from this region have become so frequent that they are now the 10th and 11th most common languages in US immigration court: Mam and Quiché. These languages have surpassed French in US immigration courts. But this raises an difficult problem. Courts have no trouble finding translators for, say, French or Spanish. (In fact, many immigration courts directly employ Spanish-language translators.) But finding speakers of Mam and Quiché are a different story. There simply aren’t so many speakers of these languages. In some contexts, like the asylum office, applicants have the obligation to find their own interpreters. But in immigration court, it’s the court itself that provides translators. This, inevitably, leads to delays in court cases and, unfortunately, errors in translation. The end result could be a denied application and deportation.</p>
+        <p>There is no clear answer to this problem. The United States does not have an official language, and even if it did, basic concerns of justice demand that everyone have linguistic access to courts. The costs and logistics prevent courts from reaching the ideal of full access, but that is not a reason to excuse courts from trying. No doubt, courts will find ways to address this problem, as more speakers of Mam,  Quiché, and other languages gain experience and certification in translating. In the meantime, however, the lack of translators is leading to delayed and denied justice.</p>
+      </div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
+  <div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
          <h1 class="blog-post-title">Expansion of Provisional Unlawful Presence Waiver</h1>
          <p class="blog-post-meta">August 3, 2016 by <a href="#">Keith</a></p>
         <p>On Friday, US Citizenship and Immigration Services announced a final regulation that expands the provisional unlawful presence waiver. This waiver is necessary for persons who have a qualifying relative in the United States (a spouse or a parent where the spouse or parent is a US citizen or a lawful permanent resident) but who cannot get a green card from within the United States. The most common reason that a green card is not available in the United States is because that person entered without inspection (e.g., by hiring a “coyote” to sneak into the US). However, the previous rule only benefited persons who had citizen family members. The new rule will expand the program to persons who have lawful permanent resident family members. The expansion does not (and by law cannot) eliminate the need for a trip outside of the US to get a valid visa and a valid entry. The expansion also takes away some certainty that was present in the prior program. Still, the expansion of the program to help the largest possible number of immigrants is a welcome change!.</p>
