--- a/news.html
+++ b/news.html
@@ -50,7 +50,20 @@
       </div>
     </div>
   </nav>
-   <div class="container main-content">
+    <div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
+         <h1 class="blog-post-title">Immigration Officials Want To See Your Social Media</h1>
+         <p class="blog-post-meta">September 3, 2016 by <a href="#">Keith</a></p>
+        <p>Customs and Border Protection recently announced an intention to begin collecting social media information about individuals who enter the US under the visa waiver program. (<a href=“http://www.nytimes.com/2016/06/29/us/homeland-security-social-media-border-protection.html”>Source Article.</a>) That program allows citizens of trusted countries to enter the US without a visa, merely by registering online a little in advance. The program greatly facilitates international travel with some of the US’s most trusted allies like the UK, Japan, Australia, Germany, etc. The new rule would ask individuals to provide their social media alias when they register online. Immigration officials would then ostensibly review the social media activity of individuals prior to green-lighting their entry into the US. On the one hand, the proposal is not intrusive because individuals who have social media accounts are already putting things into the public realm. But on the other hand, this seems like a solution in search of a problem. Are citizens of trusted countries really likely to be concealing damming information on social media accounts? Will there be any benefit in expending the resources that it will take to program this change into the registration system and then to review the social media accounts in question? It seems highly unlikely. But as with many things related to immigration enforcement, resources seem to be no object. Additionally, as immigration officials blissfully point out at every opportunity, constitutional protections (like the right to privacy) don’t apply to individuals attempting to enter the US. The combination of nearly limitless resources and the lack of constitutional protections ensures that this program, sadly, is quite likely to go into effect. </p>
+      </div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
+  <div class="container main-content">
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-10">
