--- a/news.html
+++ b/news.html
@@ -50,6 +50,19 @@
       </div>
     </div>
   </nav>
+  <div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
+         <h1 class="blog-post-title">The Judiciary Can't Help Immigrant Minors</h1>
+         <p class="blog-post-meta">September 22, 2016 by <a href="#">Keith</a></p>
+        <p>In a disappointing decision, the Ninth Circuit recently ruled that it did not have the authority to consider whether minors in immigration court have a right to a government-funded attorney. (<a href="http://www.abajournal.com/news/article/9th_circuit_rejects_bid_for_lawyers_for_child_immigrants_but_calls_for_a_ch">Story here.</a>) Unlike criminal courts, immigration courts have no system like public defenders. And while the public defender system has many problems, at least there is a system in place. Not so for thousands of immigrants who cannot afford to hire private attorneys and instead face the immigration court on their own. This system seemed patently unfair, especially considering that minors often wind up in immigration alone. In legal terms, lawyers argued that the lack of government-funded attorneys violated the due process rights. There was hope that minors would present an especially sympathetic case. And indeed, the court took the unusual step of calling on the President and Congress to solve the problem. Judge Margaret McKeown wrote: “I cannot let the occasion pass without highlighting the plight of unrepresented children who find themselves in immigration proceedings … I write to underscore that the Executive and Congress have the power to address this crisis without judicial intervention. What is missing here? Money and resolve—political solutions that fall outside the purview of the courts.” Judge Milan Smith signed onto this opinion, further emphasizing the need for a solution to this problem. So while there was no victory for immigrant minors, there is a strong sign of public pressure to fix the problem.</p>
+      </div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
     <div class="container main-content">
     <div class="row">
       <div class="col-md-1"></div>
