Added headshots to keith.html and contact.html

--- a/contact.html
+++ b/contact.html
@@ -53,11 +53,14 @@
   <div class="container main-content">
     <div class="row jumbotron vertical-center">
       <div class="col-md-1"></div>
-      <div class="col-md-10">
-      <h2>Keith</h2>
-      <p>Email: <a href="mailto:keith@southamlaw.com">keith@southamlaw.com</a></p>
-      <p>Phone: +1 (773) 466-4478</p>
+      <div class="col-md-5">
+        <h2>Keith</h2>
+        <p>Email: <a href="mailto:keith@southamlaw.com">keith@southamlaw.com</a></p>
+        <p>Phone: +1 (773) 466-4478</p>
       </div>
+      <div class="col-md-5">
+      <img src="images/contact-keith.png" class="img-responsive img-rounded pull-right margin-left height-16em-limit" alt="Headshot of Keith Southam"/>
+    </div>
       <div class="col-md-1"></div>
     </div>
   </div>
