--- a/keith.html
+++ b/keith.html
@@ -55,7 +55,10 @@
       <div class="col-md-1"></div>
       <div class="col-md-10">
       <!-- <h1 class="cover-heading">Southam Law</h1> -->
-      <p>Keith Southam is the founder and principal of Southam Law. Keith has built a career around helping immigrants. Keith worked as an international student advisor and an ESL teacher before law school. In law school, Keith focused on immigration law, including an internship at the Chicago Immigration Court and a clerkship with a solo practitioner of immigration law. After law school, Keith worked for five years as an associate attorney for a boutique immigration firm in Chicago where he handled a range of immigration law matters, including family-based green cards, non-immigrant work visas, DACA, asylum, deportation defense, and many other areas. The skills as a student advisor and ESL teacher give Keith a unique approach to immigration law. This approach is centered on providing easy-to-understand and accurate information so that every client can make fully-informed decisions. </p>
+      <div class="pull-right">
+        <img src="images/keith-keith.png" class="img-responsive img-rounded pull-right margin-bottom margin-left height-16em-limit" alt="Headshot of Keith Southam"/>
+        <p class="text-justify">Keith Southam is the founder and principal of Southam Law. Keith has built a career around helping immigrants. Keith worked as an international student advisor and an ESL teacher before law school. In law school, Keith focused on immigration law, including an internship at the Chicago Immigration Court and a clerkship with a solo practitioner of immigration law. After law school, Keith worked for five years as an associate attorney for a boutique immigration firm in Chicago where he handled a range of immigration law matters, including family-based green cards, non-immigrant work visas, DACA, asylum, deportation defense, and many other areas. The skills as a student advisor and ESL teacher give Keith a unique approach to immigration law. This approach is centered on providing easy-to-understand and accurate information so that every client can make fully-informed decisions. </p>
+      </div>
       </div>
       <div class="col-md-1"></div>
     </div>
