--- a/news.html
+++ b/news.html
@@ -55,6 +55,22 @@
       <div class="col-md-1"></div>
       <div class="col-md-10">
         <div class="blog-post">
+         <h1 class="blog-post-title">Thoughts on the 2016 Election</h1>
+         <p class="blog-post-meta">November 8, 2016 by Keith</p>
+        <p>I once read an article that indicated well over ninety percent of immigration lawyers are Democrats. It was unsurprising. When the rhetoric of the two party nominees for President are placed side by side, this choice is understandable. Indeed, this election has painted the Democrats as the party for immigration and the Republicans as the party against immigration. But immigration should not be a partisan issue. Immigration law unites a wide swath of interests across party lines. Business interests want streamlined paths for work visas. Community and charitable groups want to help millions of individuals regularize their immigration status. And everyone agrees that immigration law should work to promote family unity.</p>
+        <p>None of these goals are strictly partisan. Republican business interests may favor streamlined paths for work visas while “law and order” Republicans might balk at regularizing status for millions. Democrats seem more likely to stand behind a regularization scheme even while pro-Democrat unions worry about the effects of streamlined work visas. And individuals around the country may worry about the effects of immigration on US labor markets and US culture and society. One tragic byproduct of this election is the extend to which politicians have used that last point to foment xenophobia.</p>
+        <p>But we as a nation are better than that. It is true that the problems of immigration are complex, but they are not insurmountable. Xenophobia is not the answer. The real answer is for both parties to make a system that is fair and efficient. Right now, immigration law is neither. Comprehensive immigration reform is an absolute necessity. Indeed, a comprehensive immigration reform bill has previously been approved by the Republican-led Senate and has been supported by a Democratic President. And while such reform will not solve all partisan woes or create a perfect immigration system, it’s a start.</p>
+      	<p>Whoever wins the Presidential election will inherit a mess. But I hope some real opportunities for change and growth will come from that mess. And I hope that comprehensive immigration reform – a bipartisan wish and need – comes first.</p>
+      </div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
+  <div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
          <h1 class="blog-post-title">Immigration and Privilege</h1>
          <p class="blog-post-meta">October 2, 2016 by Keith</p>
         <p>“If he wins, I’m moving to Canada.” I take this quip as both the joke and the warning it is intended to be. But the quip highlights something else. Picking up and moving to another country is an option for individuals with edcuation, connections, and resources. To that list, I will add citizenship in a developed nation. Not everyone enjoys all of thse things, and this fact highlights something that is easy to overlook: the intersection of immigration and privilege.</p>
