Google Meta Tag Added
Added meta tag as requested by Google to verify ownership of domain.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
+    <meta name="google-site-verification" content="Yy_mSVmrwHYoG1O97Ld1JYZiOZuyOpGkk8qdU9_a0Tk" />
 
     <title>Southam Law — Firm</title>
 
