--- a/news.html
+++ b/news.html
@@ -50,6 +50,20 @@
       </div>
     </div>
   </nav>
+   <div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
+         <h1 class="blog-post-title">Success Story: Matt and Peter</h1>
+         <p class="blog-post-meta">December 15, 2016 by Keith</p>
+        <p>Matt and Peter met years ago when they wound up at the same house party. Over time, Matt and Peter started spending more time together and began dating. Unfortunately, work and school obligations pushed the two to different states. The long-distance arrangement didn't last, so the two decided to move to Chicago and have been living together ever since. As Peter's graduate program concluded, he began working under his student visa. But the couple wanted a more permanent solution. They asked Southam Law to help apply for a green card for Peter. Southam Law worked with them to obtain documentation from out of state and abroad to put together a complete application packet. Southam Law further prepared Matt and Peter for their green card interview and went with them to this interview. Everything went as smooth as possible, and the green card application was approved the day of the interview. Peter is now a permanent resident of the US, and Peter and Matt can rest easier in the security that comes with that status.</p>
+	      <p>(Names have been changed for privacy purposes)
+        </div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
   <div class="container main-content">
     <div class="row">
       <div class="col-md-1"></div>
