--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,9 @@
         <h2>Keith</h2>
         <p>Email: <a href="mailto:keith@southamlaw.com">keith@southamlaw.com</a></p>
         <p>Phone: +1 (773) 466-4478</p>
+        <p>Address: 208 South Jefferson Street, Suite 204, Chicago, Illinois 60661</p>
+        <p>(Please note that office hours are by appointment only)</p>
+        <p><a href="http://www.facebook.com/southamlaw">Facebook</a> <a href="http://www.twitter.com/southamlaw">Twitter</a></p>
       </div>
       <div class="col-md-5">
       <img src="images/contact-keith.png" class="img-responsive img-rounded pull-right margin-left height-16em-limit" alt="Headshot of Keith Southam"/>
