Success Story: Gabriela

--- a/news.html
+++ b/news.html
@@ -50,6 +50,19 @@
       </div>
     </div>
   </nav>
+	<div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
+         <h1 class="blog-post-title">Success Story: Gabriela</h1>
+         <p class="blog-post-meta">March 30, 2017 by Keith</p>
+        <p>Gabriela came to the United States as a young child with her parents who hoped to create a better life for their family. As a DREAMer, Gabriela’s path to this better life is complicated. Thankfully, when she was a teenager, Gabriela was granted DACA status. She came to Southam Law just before her DACA was about to expire and just after she married a US citizen. Despite the current attitude of the president toward immigrants, Southam Law recommended that she renew her DACA and that her husband petition for an immigrant visa for Gabriela. The reason: to minimize or eliminate any period of unlawful presence for Gabriela, allowing Gabriela to stay in the US while immigration officials make a decision on the visa petition, and avoiding the need for an unlawful presence waiver. The strategy is working. Gabriela’s DACA was renewed in only 4 weeks, and now she can safely wait for immigration to make a decision on her visa petition.</p>
+	<p>(Name changed for privacy reasons)</p>
+      </div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
   <div class="container main-content">
     <div class="row">
       <div class="col-md-1"></div>
