--- a/news.html
+++ b/news.html
@@ -55,6 +55,19 @@
       <div class="col-md-1"></div>
       <div class="col-md-10">
         <div class="blog-post">
+         <h1 class="blog-post-title">Success Story: Jack & Nathan</h1>
+         <p class="blog-post-meta">September 14, 2017 by Keith</p>
+        <p>Jack and Nathan first met when Jack was visiting Chicago for work. The two hit it off and stayed in contact even after Jack returned to his home in the UK. When Jack was unexpectedly laid off from work, he and Nathan decided to live together in the US. Nathan and Jack successfully applied for a green card for Jack. After renewing the green card, Jack then came to Southam Law to apply for citizenship. Southam Law helped Jack put together a solid application, including clear proof that he and Nathan had been living together in the US (which allowed him to become a citizen just 3 years after he received his green card). Southam Law also helped Jack prepare for the citizenship exam and went with him to the interview. It was a great success, and Jack is now a citizen of the United States!</p>
+	<p>(names changed for privacy purposes)</p>
+      </div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+	<div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
          <h1 class="blog-post-title">Guardianships for Children of Immigrants</h1>
          <p class="blog-post-meta">May 11, 2017 by Keith</p>
         <p>More and more, immigrants are talking about guardianships for their children. But what is a guardianship and do all immigrants need one? The short answers are: 1) a guardianship allows someone to act like a parent for your child if you cannot and 2) only in certain circumstances.</p>
