Article on Venezuela
¡En Español!

--- a/news.html
+++ b/news.html
@@ -55,6 +55,18 @@
       <div class="col-md-1"></div>
       <div class="col-md-10">
         <div class="blog-post">
+         <h1 class="blog-post-title">La prohibición de viajar (para Venezuela)</h1>
+         <p class="blog-post-meta">September 25, 2017 by Keith</p>
+        <p>El gobierno de presidente Trump ha decidido de renovar y expandir la prohibición de viajar en los EEUU para personas de unas países: Irán, Libia, Siria, Yemen, Somalia, Chad, Corea del Norte, y para la primera vez: Venezuela. Pero la prohibición para Venezuela es limitada. Solo personas conectadas a unos departamentos del gobierno venezolano no pueden viajar a los EEUU. Los departamentos afectados son: Ministerio del Poder Popular para el Interior, Justicia y Paz; el Servicio Administrativo de Identificación, Migración e Inmigración; el Cuerpo de Servicios Científicos, Penales y de Investigación Criminal; el Servicio Bolivariano de Inteligencia Nacional; y el Ministerio del Poder Popular para Relaciones Exteriores. Oficiales en estos departamentos y miembros de sus familias inmediatas no pueden obtener ni usar visas de negocios (B1) o visas de turista (B2). Para otros Venezolanos, ellos pueden obtener visas y viajar a los EEUU. Por supuesto, es posible que la cultura de la embajada en Caracas puede ser más estricta en el futuro. Pero para ahora, no creo que la prohibición es una razón de preocuparse.</p>
+      </div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+	<div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
          <h1 class="blog-post-title">Success Story: Jack and Nathan</h1>
          <p class="blog-post-meta">September 14, 2017 by Keith</p>
         <p>Jack and Nathan first met when Jack was visiting Chicago for work. The two hit it off and stayed in contact even after Jack returned to his home in the UK. When Jack was unexpectedly laid off from work, he and Nathan decided to live together in the US. Nathan and Jack successfully applied for a green card for Jack. After renewing the green card, Jack then came to Southam Law to apply for citizenship. Southam Law helped Jack put together a solid application, including clear proof that he and Nathan had been living together in the US (which allowed him to become a citizen just 3 years after he received his green card). Southam Law also helped Jack prepare for the citizenship exam and went with him to the interview. It was a great success, and Jack is now a citizen of the United States!</p>
