--- a/news.html
+++ b/news.html
@@ -55,6 +55,19 @@
       <div class="col-md-1"></div>
       <div class="col-md-10">
         <div class="blog-post">
+         <h1 class="blog-post-title">Latest Success Story: Laila's father, Javed</h1>
+         <p class="blog-post-meta">October 16, 2017 by Keith</p>
+        <p>Javed came to the United States over ten years ago. After his daughter, Laila, became a US citizen, they decided to apply for his green card. Javed and Laila came to Southam Law for help through the process. We prepared and filed all of the forms for this application. Immigration officials were quick to approve Javed's work and travel permits, but a decision on the green card lingered. After several inquiries to the appropriate immigration office, they finally approved the application. Officials did not even require Javed to appear for an interview. Now Javed can rest with the security that comes with lawful permanent resident status!</p>
+	<p>(Names changed for privacy purposes.</p>
+      </div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+	<div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
          <h1 class="blog-post-title">La prohibición de viajar (para Venezuela)</h1>
          <p class="blog-post-meta">September 25, 2017 by Keith</p>
         <p>El gobierno de presidente Trump ha decidido de renovar y expandir la prohibición de viajar en los EEUU para personas de unas países: Irán, Libia, Siria, Yemen, Somalia, Chad, Corea del Norte, y para la primera vez: Venezuela. Pero la prohibición para Venezuela es limitada. Solo personas conectadas a unos departamentos del gobierno venezolano no pueden viajar a los EEUU. Los departamentos afectados son: Ministerio del Poder Popular para el Interior, Justicia y Paz; el Servicio Administrativo de Identificación, Migración e Inmigración; el Cuerpo de Servicios Científicos, Penales y de Investigación Criminal; el Servicio Bolivariano de Inteligencia Nacional; y el Ministerio del Poder Popular para Relaciones Exteriores. Oficiales en estos departamentos y miembros de sus familias inmediatas no pueden obtener ni usar visas de negocios (B1) o visas de turista (B2). Para otros Venezolanos, ellos pueden obtener visas y viajar a los EEUU. Por supuesto, es posible que la cultura de la embajada en Caracas puede ser más estricta en el futuro. Pero para ahora, no creo que la prohibición es una razón de preocuparse.</p>
