--- a/news.html
+++ b/news.html
@@ -60,7 +60,10 @@
         <p>Claudia and Marco have know each other for some time. Claudia came to the US with her parents as a child, but after several years returned to her home country. Marco meanwhile is a citizen of the United States. Later in life, Claudia and Marco got married. Based on this marriage, Marco applied for an immigrant visa so that Claudia could move back to the United States to join him. Unfortunately, the US consulate denied Claudia's visa, saying she was ineligible to enter the United States due to her prior trips to the United States. That's when Claudia and Marco reached out. Southam Law reviewed the visa application and Claudia's application, concluding that the consulate had made a mistake. Southam Law submitted a request to the consulate, asking them to reconsider the decision and providing evidence in support. The strategy worked. Claudia is now a permanent resident, starting a new life with her husband in the United States!</p>
 	<p>(Names changed for privacy purposes.)</p>
       </div><!-- /.blog-post -->
-     </div>
+   </div>
+     <div class="col-md-1"></div>
+    </div>
+	<div class="container main-content">
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-10">
