Success Story: Weronika's Student Visa

--- a/news.html
+++ b/news.html
@@ -50,6 +50,20 @@
       </div>
     </div>
   </nav>
+	 <div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
+         <h1 class="blog-post-title">Success Story: Weronika's Student Visa</h1>
+         <p class="blog-post-meta">January 25, 2018 by Keith</p>
+        <p>Weronika came to the United States with her parents when she was a young child. Her father was a student, and Weronika went to elementary and then high school in the US. When Weronika graduated from high school, she was thrilled to be admitted to a prestigious university with a scholarship. However, as a dependent on her father's student visa, she could not accept the scholarship as planned. That's when Weronika came to Southam Law. Southam Law helped Weronika change her status from a dependent to her own student visa (which would allow her to accept the scholarship). Though immigration took longer than Weronika wanted, the request was ultimately approved. Weronika can now accept the scholarship and begin her studies in earnest!</p>
+		<p>(Names changed for privacy purposes.)</p>
+	</div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
 	<div class="container main-content">
 		    <div class="row">
       <div class="col-md-1"></div>
