Multiple close DIVs
Seems to fix the problem based on test

--- a/news.html
+++ b/news.html
@@ -108,6 +108,7 @@
 	<p>(Names changed for privacy purposes.)</p>
       </div><!-- /.blog-post -->
      </div>
+	    </div>
      <div class="col-md-1"></div>
     </div>
 	<div class="container main-content">
@@ -123,6 +124,7 @@
      </div>
      <div class="col-md-1"></div>
     </div>
+		</div>
 	<div class="container main-content">
     <div class="row">
       <div class="col-md-1"></div>
@@ -135,6 +137,7 @@
      </div>
      <div class="col-md-1"></div>
     </div>
+		</div>
 	<div class="container main-content">
     <div class="row">
       <div class="col-md-1"></div>
@@ -148,6 +151,7 @@
      </div>
      <div class="col-md-1"></div>
     </div>
+		</div>
 	<div class="container main-content">
     <div class="row">
       <div class="col-md-1"></div>
@@ -167,6 +171,7 @@
      </div>
      <div class="col-md-1"></div>
     </div>
+		</div>
 	<div class="container main-content">
     <div class="row">
       <div class="col-md-1"></div>
@@ -180,6 +185,7 @@
      </div>
      <div class="col-md-1"></div>
     </div>
+		</div>
   <div class="container main-content">
     <div class="row">
       <div class="col-md-1"></div>
