Success Story: Käthe and Laura

--- a/news.html
+++ b/news.html
@@ -55,6 +55,21 @@
       <div class="col-md-1"></div>
       <div class="col-md-10">
         <div class="blog-post">
+         <h1 class="blog-post-title">Success Story: Käthe and Laura</h1>
+         <p class="blog-post-meta">April 17, 2018 by Keith</p>
+        <p>Käthe became a permanent resident several years ago based on her marriage to her US citizen wife, Laura. The two were happily living together in Chicago with their sons when Laura was offered a post-doctoral fellowship in Europe. Laura of course wanted to take the fellowship, but Käthe was worried about losing her green card status in the US. Living in Europe could jeopardize that status. Käthe also wanted to apply to become a US citizen, but for that application, she had to prove that she and Laura had lived together in the US for three years. And on top of all that, Käthe comes from a country that is skeptical of dual citizens, requiring her to get advance permission to become a US citizen or risk losing the citizenship of her country of birth. With all of these constraints in mind, Käthe turned to Keith at Southam Law.</p>
+	<p>Keith researched immigration policy to ensure that Käthe and Laura only needed to live together in the US up to the point that the application was submitted. Keith also advised Käthe to maintain a US residence and to keep her Chicago job. These steps allowed Käthe to apply for US citizenship within the time frame her home country set and while Laura moved to Europe to take the fellowship. There was a small timing hiccup with the oath ceremony at the end, but otherwise, everything worked perfectly. Immigration accepted the proof that Käthe and Laura were living together in the US at the time of the application and that Käthe kept a US residence even while Laura was working in Europe with their kids. Käthe is now a US citizen. (And she’s also still a citizen of her birth country.) Käthe, Laura, and their two boys can rest assured that they are all US citizens, regardless of where job opportunities might take the family in the future!</p>
+	<p>(Names changed for privacy purposes.)</p>
+	</div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
+	<div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
          <h1 class="blog-post-title">Success Story: Naziha and James</h1>
          <p class="blog-post-meta">April 4, 2018 by Keith</p>
         <p>Naziha came to the US several years ago as a student. Naziha was married at that time but things were rocky, and ultimately she decided to divorce her husband. Her husband and his family had previously been gruff with Naziha, and their attitude only worsened after the divorce. Naziha continued to live and study in the US. She eventually also had a falling-out with her own family, and that's when Naziha began to worry for her safety in her home country. </p>
